Fix single docs layout collapsed issue with WoodMart theme

--- a/assets/css/ezd-docs-widgets.css
+++ b/assets/css/ezd-docs-widgets.css
@@ -302,6 +302,7 @@
 .ezd-custom-container.ezd-container {
   width: 100%;
   box-sizing: border-box;
+  display: block;
 }
 @media (min-width: 1300px) {
   .ezd-custom-container.ezd-container {
