--- a/assets/scss/frontend/_framework.scss
+++ b/assets/scss/frontend/_framework.scss
@@ -238,6 +238,7 @@
 .ezd-custom-container.ezd-container {
 	width: 100%;
 	box-sizing: border-box;
+	display: block;
 	@media (min-width: 1300px) {
 		max-width: 1240px;
 	}
